# django-sqlconsole

./: LICENSE  MANIFEST.in  README.md  requirements.in  requirements.txt  setup.cfg
.github/workflows/: sqlconsole.yml
sqlconsole/: admin.py  apps.py  download.py  forms.py  models.py  tests.py  urls.py  views.py
sqlconsole/migrations/: 0001_initial.py  0002_rename_created_querylog_created_at_and_more.py
sqlconsole/static/sqlconsole/css/: sqlconsole.css
sqlconsole/templates/admin/: sqlconsole.djhtml
sqlconsole/templates/admin/sqlconsole/: change_list_object_tools.html
tests/: test_settings.py  tests.py
