[metadata]
name = django-sqlconsole
version = 1.2
description = sql console is an app which allows for the exeuting of sql queries in the admin section of django.
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/knightebsuku/django-sqlconsole
author = Lunga Mthembu
author_email = stumenz.complex@gmail.com
license = GPL v3  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
install_requires =
    django == 2.2.*
include_package_data = true
packages = find: