[metadata]
name = django-sqlconsole
version = 1.4.0
description = sql console is an app which allows for the execution of sql queries in the admin section of django.
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/StandaloneDynamics/django-sqlconsole
author = Menzi Mthembu
author_email = midnight.complex@protonmail.com
license = GPL v3  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
install_requires =
    django ~= 4.2
include_package_data = true
packages = find_namespace:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*